--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
@@ -1,5 +1,5 @@
 .imgs-container {
-/*	padding: 0 3%;*/
+	/*	padding: 0 3%;*/
 }
 
 .answer-img {
@@ -42,6 +42,7 @@ p {
 }
 
 .ask-title {
+	letter-spacing: .8px;
 	height: auto;
 	padding-top: .2rem;
 	color: #323232;
@@ -49,8 +50,8 @@ p {
 
 .answer-content {
 	word-wrap: break-word;
-	color: #808080 ;
-	font-size: 1.5rem;
+	color: #808080;
+	font-size: 1.4rem;
 }
 
 .mui-segmented-control {
@@ -107,7 +108,7 @@ p {
 }
 
 .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
-	border: 1px solid rgba(228,228,228,0.5);
+	border: 1px solid rgba(228, 228, 228, 0.5);
 	height: 9rem;
 	width: 8.5rem;
 	vertical-align: middle;
@@ -135,7 +136,10 @@ p {
 /*问题标题*/
 
 .ask-title {
-	color: #222222;
+	font-size: 1.6rem;
+	font-family: "楷体";
+	font-weight: bold;
+	color: #323232;
 }
 
 
@@ -144,6 +148,10 @@ p {
 .question-bottom,
 .channel-title {
 	color: #B7B7B7;
+}
+
+.question-bottom {
+	margin-top: 0.8rem;
 }
 
 .mui-content,
@@ -159,17 +167,17 @@ p {
 #experts_sw .mui-control-item {
 	margin-top: 0.5rem;
 	border-radius: 3px;
-
 	/*box-shadow: -1px 0px 2px rgba(228,228,228,0.4),
 	1px 2px 1px rgba(228,228,228,0.4);*/
-
 	/*box-shadow: -1px 0px 2px rgba(230,230,230,0.6),
 	1px 2px 1px rgba(230,230,230,0.4);*/
 	box-shadow: 0px 2px 4px rgba(183, 183, 183, 0.2);
 }
-.mui-table-view:after{
+
+.mui-table-view:after {
 	background-color: transparent;
 }
-.mui-table-view:before{
+
+.mui-table-view:before {
 	background-color: transparent;
 }
