--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -1,4 +1,3 @@
-
 /*#list-container {
 	padding-top: 3.5rem;
 }*/
@@ -7,7 +6,7 @@
 
 .mui-table-view-cell p:nth-child(1) {
 	font-size: 16px;
-	color: #808080;	
+	color: #808080;
 }
 
 .mui-bar~.mui-content .mui-fullscreen {
@@ -192,42 +191,77 @@ a>p {
 	padding-left: .5rem;
 	font-size: 1.5rem;
 }
-.apply-message:last-of-type{
+
+.apply-message:last-of-type {
 	font-weight: normal !important;
-	color:#808080 !important;
+	color: #808080 !important;
 	font-size: 1.2rem !important;
 }
-.mui-btn-green{
+
+.mui-btn-green {
 	background-color: #1DB8F1;
 }
-.mui-btn{
+
+.mui-btn {
 	border: none;
 }
-.mui-btn-outlined{
+
+.mui-btn-outlined {
 	color: #B7B7B7;
 }
-.apply-container>p{
-	font-weight: 400
-	color: #808080;
+
+.apply-container>p {
+	font-weight: 400 color: #808080;
 }
-.mui-table-view-divider{
-	background-color: rgb(238,239,243);
+
+.mui-table-view-divider {
+	background-color: rgb(238, 239, 243);
 }
-.extra-input{
+
+.extra-input {
 	width: 100%;
 	min-height: 50px;
 	border: solid 1px #E4E4E4 !important;
 }
-.class-title{
+
+.class-title {
 	color: #323232 !important;
 	padding-right: 1rem;
 }
-.btn-applied{
-	
-}
-.center-popover{
+
+.btn-applied {}
+
+.center-popover {
 	position: fixed;
 	top: 90px;
 	left: 5%;
 	width: 90%;
+}
+
+.data-container {
+	box-shadow: 1px 1px 1px rgba(228, 228, 228, 0.5);
+	border: 1px solid rgba(228, 228, 228, 0.5);
+}
+.mui-table-view-cell{
+	margin: 5px;
+}
+.data-selected{
+	border: 1px solid rgba(29, 184, 241, 0.5);
+}
+.no-data{
+	position: absolute;
+	width: 100%;
+	top: 50px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	display: -webkit-flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	display: none;
+}
+.no-img{
+	width: 50%;
 }
