--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
@@ -3,6 +3,7 @@
 .head-img {
 	width: 4rem;
 	height: 4rem;
+	border-radius: 50%;
 }
 
 
@@ -108,7 +109,7 @@
 
 .comment-no {
 	font-size: 14px;
-	padding-top: 10px;
+	padding-top: 12px;
 	color: #808080;
 	margin-left: 10px;
 }
@@ -116,7 +117,7 @@
 .order-selector {
 	position: fixed;
 	right: 0;
-	padding: 6px 0;
+	padding: 12px 0;
 	color: #808080;
 	font-size: 14px;
 	margin-right: 10px;
@@ -124,11 +125,6 @@
 .mui-icon-arrowdown{
 	font-size: 14px;
 }
-
-.head-img {
-	border-radius: 50%;
-}
-
 .answer-imgs {
 	width: 100%;
 }
@@ -223,13 +219,15 @@
 	padding-left: 4rem;
 }
 
-.table-view-cell {
+.comments-cell{
 	display: flex;
 	display: -webkit-flex;
+	align-items: center;
 }
 
 .img-container {
-	min-width: 5rem;
+	width: 4rem;
+	height: 4rem;
 	align-self: flex-start;
 }
 
@@ -242,15 +240,23 @@
 }
 
 .support-container {
+	/*background-color: blue;*/
 	height: 4rem;
 	width: 4rem;
 	max-width: 14%;
-	padding: .2rem 0 2rem 2rem;
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
+	padding: 0 0 2rem 2rem;
 }
+/*.icon-support{
+	margin: auto;
+}*/
 
 .comment-personName {
-	line-height: 1.2;
+	line-height: 1.1;
 	color: #323232;
+	padding-left: 5px;
 }
 
 .mui-popover {
@@ -272,4 +278,7 @@
 }
 .comment-date{
 	color: #B7B7B7;
+}
+.comments-content{
+	padding-left: 4rem;
 }
