0005363: 班级空间修改方案如图所示

--- a/JiaoBaoYun-hb/css/utils/bubble.css
+++ b/JiaoBaoYun-hb/css/utils/bubble.css
@@ -10,7 +10,7 @@
         word-wrap: break-word;
         border-radius: 5px;
         padding:2.5%;
-        margin:2.5%;
+        margin:0 0 0 2.5%;
      /*   border: 1px solid #E4E4E4;*/
     }
     .chat_content_top{
