--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -166,10 +166,15 @@ div>.icon-xiangce:before,
 .icon-support {
 	float: right;
 }
-
-.icon-chakan,
-.icon-support {
-	padding-right: .5rem;
+.icon-dianzan1:before,
+.icon-liulan:before,
+.icon-chakan:before,
+.icon-support:before {
+	margin-right: 5px;
+}
+.bottom-chakan,
+.bottom-zan{
+	margin-right: 10px;
 }
 
 .mui-table-view-cell {
@@ -208,6 +213,7 @@ div>.icon-xiangce:before,
 }
 
 .chat-bottom {
+	padding-top: 10px;
 	white-space: nowrap;
 }
 
@@ -257,3 +263,4 @@ div>.icon-xiangce:before,
 	background-color: #E4E4E4;
 	height: 1px;
 }
+
