--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
@@ -44,7 +44,7 @@ input[type=submit]:enabled:active {
 	padding: 0 1.5rem;
 	margin-top: 8px;
     margin-bottom: 0.7rem;
-	color: #b7b7b7;
+	color: #323232;
 }
 
 #history_container {
