--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -210,8 +210,19 @@ div>.icon-xiangce:before,
 	color: #000000;
 	font-size: 1.0rem;
 	padding-bottom: .2rem;
+	text-align: justify;
 }
-
+.omit-line-8{
+	overflow: hidden;
+	text-overflow: ellipsis;
+	/*white-space: nowrap;*/
+	display: -webkit-box;
+	-webkit-line-clamp: 8;
+	-webkit-box-orient: vertical;
+}
+.more-span{
+	color: #12B7F5;
+}
 .chat-bottom {
 	padding-top: 10px;
 	white-space: nowrap;
