--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -221,7 +221,8 @@ div>.icon-xiangce:before,
 	-webkit-box-orient: vertical;
 }
 .more-span,.less-span{
-	color: #12B7F5;
+	font-size: 1.0rem;
+	color: #b7b7b7;
 }
 .chat-bottom {
 	padding-top: 10px;
