--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -219,6 +219,7 @@ div>.icon-xiangce:before,
 	display: -webkit-box;
 	-webkit-line-clamp: 8;
 	-webkit-box-orient: vertical;
+	text-align: inherit;
 }
 .more-span,.less-span{
 	font-size: 1.0rem;
