--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-questionSearch.css
@@ -7,6 +7,7 @@
 	width: 11%;
 	line-height: 3rem;
 	padding: 0px 0;
+	font-size: 16px;
 	/*margin: 0.8rem 0 0.7rem 0;*/
 	display: inline;
 	height: 44px;
