--- a/JiaoBaoYun-hb/css/homework/homework-commit.css
+++ b/JiaoBaoYun-hb/css/homework/homework-commit.css
@@ -2,11 +2,11 @@
  * 提交评论按钮样式
  */
 
-html,
+/*html,
 body,
 .mui-content {
 	background-color: white;
-}
+}*/
 
 .btn-submit {
 	/*position: absolute;*/
@@ -19,14 +19,16 @@ body,
 }
 
 .comment-area {
-	margin-top: 1rem;
 	padding: 10px;
-	border-bottom: solid 1px #E4E4E4;
 	border-top: solid 1px #E4E4E4;
+	border-bottom: solid 1px #E4E4E4;
 }
 
 .homework-container {
+	background-color: white;
 	padding: 0 15px;
+	border-top: solid 1px #E4E4E4;
+	border-bottom: solid 1px #E4E4E4;
 }
 
 .comment-item {
@@ -45,7 +47,9 @@ body,
 	align-items: center;
 	padding: 10px 0;
 }
-
+h6{
+	margin: 0;
+}
 .result-text {
 	min-height: 4rem;
 }
