展现头像改成40*40 留言板点击头像进入个人空间 关注状态问题 删除动态

--- a/JiaoBaoYun-hb/css/show/show.css
+++ b/JiaoBaoYun-hb/css/show/show.css
@@ -109,8 +109,8 @@ body,
 .dynamic-personal-image {
 	/*个人头像圆形*/
 	border-radius: 50%;
-	width: 50px !important;
-	height: 50px;
+	width: 40px ;
+	height: 40px;
 }
 
 .dynamic-image-div {
