--- a/JiaoBaoYun-hb/css/homework/homework-commit.css
+++ b/JiaoBaoYun-hb/css/homework/homework-commit.css
@@ -12,7 +12,7 @@ body,
 	/*position: absolute;*/
 	width: 90%;
 	margin-left: 5%;
-	height: 3rem;
+	height: 40px;
 	margin-bottom: 1rem;
 	background-color: #1DB8F1;
 	border-color: #1DB8F1;
