调整邀请按钮

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -269,4 +269,4 @@
 
 .icon-changeinfo0:before { content: "\e65c"; }
 
-.icon-yaoqing0:before { content: "\e65e4"; }
+.icon-yaoqing0:before { content: "\e664"; }
