--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -157,7 +157,8 @@ legend {
 }
 
 .buttons {
-	padding: 1.5rem 0;
+	background-color: white;
+	padding-bottom: 15px;
 }
 
 /*.mui-popover {
@@ -220,6 +221,7 @@ a>p {
 	width: 100%;
 	min-height: 50px;
 	border: solid 1px #E4E4E4 !important;
+	border-radius: 0;
 }
 
 .class-title {
@@ -234,6 +236,7 @@ a>p {
 	top: 120px;
 	left: 5%;
 	width: 90%;
+	background-color: white;
 }
 
 .data-container {
@@ -272,7 +275,7 @@ a>p {
 }
 .title-left{
 	width: 5px;
-	height: 40px;
+	height: 30px;
 	background-color: #1DB8F1;
 }
 .title-middle{
@@ -280,12 +283,13 @@ a>p {
 	padding-left: 5px;
 	flex-grow: 1;
 	font-size: 20px;
+	color:#323232 ;
 }
 .title-right{
 	padding: 5px;
 }
 .chose-container{
-	padding-top: 15px;
+	padding: 15px 0;
 }
 .mui-popover{
 	border-radius: 0;
