--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -218,7 +218,8 @@ a>p {
 }
 
 .extra-input {
-	width: 100%;
+	width: 90%;
+	margin-left: 5%;
 	min-height: 50px;
 	border: solid 1px #E4E4E4 !important;
 	border-radius: 0;
