--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -265,8 +265,13 @@
 
 .icon-yuyin3:before { content: "\e65e3"; }
 
+.icon-changeinfo1:before { content: "\e652"; }
+
 .icon-adddata0:before { content: "\e65a"; }
 
 .icon-changeinfo0:before { content: "\e65c"; }
 
 .icon-yaoqing0:before { content: "\e664"; }
+
+.icon-adddata1:before { content: "\e65d"; }
+
