--- a/JiaoBaoYun-hb/css/mine/search.css
+++ b/JiaoBaoYun-hb/css/mine/search.css
@@ -11,7 +11,9 @@
 	display: inline;
 	height: 44px;
 }
-
+.search-input{
+	padding-left: 4px;
+}
 
 .mui-btn-blue,
 .mui-btn-primary,
@@ -21,7 +23,7 @@ input[type=submit] {
 	background-color: #13b7f6;
 	font-size: 16px;
 	/*//1.5rem;*/
-	font-weight: bold;
+	/*font-weight: bold;*/
 	line-height: 44px;
 }
 
