--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -114,9 +114,6 @@ div>.icon-xiangce:before,
  */
 .quit-container{
 	width: 100%;
-	position: absolute;
-	bottom: 0;
-	z-index: 99;
 	height:5rem;
 	padding: 5px 0;
 	box-shadow: 0px -1px 2px #E4E4E4;
@@ -344,4 +341,10 @@ div>.icon-xiangce:before,
 }
 .chose-container{
 	padding: 15px 0;
+}
+.more-container{
+	text-align: center;
+}
+.more-arrow{
+	font-size: 16px;
 }
