--- a/JiaoBaoYun-hb/css/mine/apply-byCode.css
+++ b/JiaoBaoYun-hb/css/mine/apply-byCode.css
@@ -37,6 +37,12 @@
 	border-radius: 0;
 	padding: 10px;
 }
+.mui-btn-primary{
+	background-color: #13b7f6;
+	height: 40px;
+	border: 0;
+	font-size: 16px;
+}
 .group-img{
 	width: 4rem;
 	height: 4rem;
@@ -44,4 +50,7 @@
 }
 .group-info{
 	text-align: center;
+}
+.choose-hint{
+	padding-left: 5%;
 }
