--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -117,6 +117,8 @@
 
 .icon-yunpan:before { content: "\e607"; }
 
+.icon-jiahao:before { content: "\e63d"; }
+
 .icon-fanhui2:before { content: "\e651"; }
 
 .icon-lishijilu:before { content: "\e621"; }
@@ -276,3 +278,4 @@
 .icon-yaoqing0:before { content: "\e664"; }
 
 .icon-adddata1:before { content: "\e65d"; }
+
