--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,7 +10,6 @@
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-stroke-width: 0.2px;
 }
-
 .icon-bianji:before { content: "\3486"; }
 
 .icon-close:before { content: "\e646"; }
@@ -70,6 +69,8 @@
 .icon-date:before { content: "\e6eb"; }
 
 .icon-about:before { content: "\e605"; }
+
+.icon-erweima:before { content: "\e66f"; }
 
 .icon-zhuanjia:before { content: "\e63a"; }
 
@@ -278,4 +279,3 @@
 .icon-yaoqing0:before { content: "\e664"; }
 
 .icon-adddata1:before { content: "\e65d"; }
-
