--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -154,11 +154,13 @@ div>.icon-xiangce:before,
 }
 
 .icon-chakan {
+	font-size: 15px;
 	float: right;
 	color: #B7B7B7;
 }
 
 .icon-support {
+	font-size: 15px;
 	float: right;
 }
 .icon-dianzan1:before,
@@ -221,7 +223,7 @@ div>.icon-xiangce:before,
 	color: #b7b7b7;
 }
 .chat-bottom {
-	padding-top: 10px;
+	padding-top: 0px;
 	white-space: nowrap;
 }
 
