--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -10,6 +10,7 @@
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-stroke-width: 0.2px;
 }
+
 .icon-bianji:before { content: "\3486"; }
 
 .icon-close:before { content: "\e646"; }
@@ -279,3 +280,7 @@
 .icon-yaoqing0:before { content: "\e664"; }
 
 .icon-adddata1:before { content: "\e65d"; }
+
+.icon-lishijilu1:before { content: "\e670"; }
+
+.icon-tongji:before { content: "\e676"; }
