--- a/JiaoBaoYun-hb/css/show/show.css
+++ b/JiaoBaoYun-hb/css/show/show.css
@@ -146,7 +146,7 @@ body,
 	height: 15px;
 	width: 15px !important;
 	margin-right: 5px;
-	margin-bottom: 0px;
+	margin-top: 3px;
 }
 
 .dynamic-margin-top-10px {
