--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -281,6 +281,8 @@
 
 .icon-adddata1:before { content: "\e65d"; }
 
+.icon-tongji:before { content: "\e676"; }
+
 .icon-lishijilu1:before { content: "\e670"; }
 
-.icon-tongji:before { content: "\e676"; }
+.icon-jinggao-copy:before { content: "\e65e4"; }
