订购会员界面

--- a/JiaoBaoYun-hb/css/cloud/order-member.css
+++ b/JiaoBaoYun-hb/css/cloud/order-member.css
@@ -1,3 +1,21 @@
+.personInfo-container{
+	padding: 10px 15px;
+	background-color: white;
+}
+.head-portrait{
+	width: 4rem;
+	height: 4rem;
+	vertical-align: middle;
+	margin-right: 10px;
+}
+.deal-choose-container{
+	background-color: white;
+	margin-top: 10px;
+}
+.normal-super{
+	width: 80%;
+	margin:10px 10%;
+}
 .deal-container {
 	border: solid 1px #12B7F5;
 	display: flex;
@@ -39,4 +57,46 @@ p {
 }
 .mui-control-content:first-child{
 	margin-top: 0;
+}
+.mui-table-view.mui-grid-view .mui-table-view-cell{
+	text-align: left;
+}
+.mui-grid-view.mui-grid-9{
+	border: 0;
+}
+.mui-grid-view.mui-grid-9:after{
+	height: 0;
+}
+.mui-grid-view.mui-grid-9 .mui-table-view-cell{
+	background-color: white;
+	border: 0;
+	padding: 0;
+}
+.mui-grid-view.mui-grid-9 .mui-media .mui-icon{
+	font-size: 2.2rem;
+}
+.privilege-container{
+	background-color: white;
+	padding: 10px 15px;
+	margin-top: 10px;
+}
+.privilege-head{
+	width: 100%;
+	text-align: center;
+	font-size: 16px;
+	padding-bottom: 10px ;
+}
+.across-line{
+	height: 1px;
+	margin: 0 15px;
+	background-color: #12B7F5;
+}
+.extra-container{
+	margin-top: 10px;
+}
+.info-intro{
+	padding: 10px 15px 0;
+}
+.info-words{
+	padding-right: 15px;
 }
