--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -255,6 +255,8 @@
 
 .icon-shipinlei-xunhuanguiji:before { content: "\e634"; }
 
+.icon-iconhexinhuiyuan:before { content: "\e674"; }
+
 .icon-jiaxiabiao:before { content: "\e639"; }
 
 .icon-banxiabiao:before { content: "\e638"; }
