--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -145,8 +145,6 @@ body {
 	width: 90%;
 }
 
-
-
 fieldset {
 	background: transparent;
 	border: none;
@@ -160,6 +158,7 @@ legend {
 	background-color: white;
 	padding-bottom: 15px;
 }
+
 
 /*.mui-popover {
 	width: 90%;
@@ -245,10 +244,12 @@ a>p {
 	box-shadow: 1px 1px 1px rgba(228, 228, 228, 0.5);
 	border: 1px solid rgba(228, 228, 228, 0.5);
 }
-.data-selected{
+
+.data-selected {
 	border: 1px solid rgba(29, 184, 241, 0.5);
 }
-.no-data{
+
+.no-data {
 	position: absolute;
 	width: 100%;
 	top: 50px;
@@ -262,11 +263,12 @@ a>p {
 	justify-content: center;
 	display: none;
 }
-.no-img{
+
+.no-img {
 	width: 50%;
 }
 
-.pop-title{
+.pop-title {
 	width: 100%;
 	height: 40px;
 	background-color: #F2F3F5;
@@ -275,63 +277,93 @@ a>p {
 	display: -webkit-flex;
 	align-items: center;
 }
-.title-left{
+
+.title-left {
 	width: 3px;
 	height: 30px;
 	background-color: #1DB8F1;
 }
-.title-middle{
+
+.title-middle {
 	width: 50%;
 	padding-left: 5px;
 	flex-grow: 1;
 	font-size: 20px;
-	color:#323232 ;
+	color: #323232;
 }
-.title-right{
+
+.title-right {
 	padding: 10px;
 }
-.chose-container{
+
+.chose-container {
 	padding: 15px 0 10px;
 }
-.mui-popover{
+
+.mui-popover {
 	border-radius: 0;
 }
-.icon-guanbi1{
+
+.icon-guanbi1 {
 	color: #D2D2D2;
 	font-size: 24px;
 }
-.pop-hint{
+
+.pop-hint {
 	font-size: 17px;
 	color: #323232;
 	/*margin-left: 20px;*/
 	margin: 10px 15px 0px;
 }
-.div-chose>label{
+
+.div-chose>label {
 	color: #808080;
-	font-size: 16px;
-}
-.apply-group img{
-	margin-right: 5px;
-}
-.mui-radio input[type=radio]:before{
-	content: '\e411';
-}
-.mui-radio input[type=radio]:checked:before {
-	content: '\e442';
-	color: #12B7F5;
-}
-.mui-input-group .mui-input-row:after{
-	height: 0;
-}
-.mui-input-group:first-child:before,
-.mui-input-group:last-child:after{
-	height: 0;
-}
-.mui-input-group:before,
-.mui-input-group:after{
-	height: 0;
+	font-size: 14px;
 }
 .mui-radio label{
 	font-size: 14px;
+}
+.apply-group img {
+	margin-right: 5px;
+}
+
+.mui-radio input[type=radio]:before {
+	content: '\e411';
+	font-size: 18px;
+}
+
+.mui-radio input[type=radio]:checked:before {
+	content: '\e442';
+	color: #12B7F5;
+	font-size: 18px;
+}
+
+.mui-input-group .mui-input-row:after {
+	height: 0;
+}
+
+.mui-input-group:first-child:before,
+.mui-input-group:last-child:after {
+	height: 0;
+}
+
+.mui-input-group:before,
+.mui-input-group:after {
+	height: 0;
+}
+
+.mui-radio label {
+	font-size: 14px;
 	color: #808080;
+}
+
+.mui-radio.mui-left label {
+	padding-right: 15px;
+	padding-left: 40px;
+}
+.mui-input-row label {
+	padding: 8px 5px;
+}
+.mui-input-row.mui-radio{
+	width: 32%;
 }
